--- a/package.yml
+++ b/package.yml
@@ -10,6 +10,7 @@ requires:
     redaxo: ^5.17
     packages:
         yform: "^4"
+        yform_field: ">=3"
 
 page:
     title: translate:tier_title
